k8smanifest/mongodb.yaml
---
apiVersion: storage.k8s.io/v1
kind: StorageClass
metadata:
  name: mongo-sc
provisioner: kubernetes.io/aws-ebs
parameters:
  type: gp2
volumeBindingMode: WaitForFirstConsumer
# ---
# apiVersion: storage.k8s.io/v1
# kind: StorageClass
# metadata:
#   name: mongo-sc
# provisioner: kubernetes.io/azure-disk
# parameters:
#   skuName: Standard_LRS
#   location: eastus2
# volumeBindingMode: WaitForFirstConsumer
# allowVolumeExpansion: true
# ---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  selector:
    name: mongo
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      name: mongo
  serviceName: "mongo"
  replicas: 1
  template:
    metadata:
      labels:
        name: mongo
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: mongo
        image: mongo
        ports:
          - containerPort: 27017
        volumeMounts:
            - name: data-volume
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: data-volume
      spec:
        storageClassName: mongo-sc
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: data-volume
# spec:
#   accessModes:
#     - ReadWriteOnce
#   storageClassName: fast
#   resources:
#     requests:
#       storage: "1Gi"
